{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 49,
  "lineage": "4b4a1bf3-30c9-d46a-e260-eb79f9768522",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hashicat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-015aaf59c8743b142",
            "domain": "vpc",
            "id": "eipalloc-09921d3209773bafe",
            "instance": "i-005abe0be6a13bbe4",
            "network_interface": "eni-0c445675c9710132a",
            "private_dns": "ip-10-0-10-243.ec2.internal",
            "private_ip": "10.0.10.243",
            "public_dns": "ec2-34-238-79-194.compute-1.amazonaws.com",
            "public_ip": "34.238.79.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.hashicat",
            "aws_key_pair.hashicat",
            "aws_security_group.hashicat",
            "aws_subnet.hashicat",
            "aws_vpc.hashicat",
            "tls_private_key.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hashicat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff7189cf12ed8eb6",
            "arn": "arn:aws:ec2:us-east-1:030202926652:instance/i-005abe0be6a13bbe4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-005abe0be6a13bbe4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudzenix-ssh-key.pem",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c445675c9710132a",
            "private_dns": "ip-10-0-10-243.ec2.internal",
            "private_ip": "10.0.10.243",
            "public_dns": "ec2-34-238-79-194.compute-1.amazonaws.com",
            "public_ip": "34.238.79.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05990af8b4b730ac9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00badee96e0caf5c5",
            "tags": {
              "Name": "cloudzenix-hashicat-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079b066d54c6baf71"
            ]
          },
          "dependencies": [
            "aws_key_pair.hashicat",
            "aws_security_group.hashicat",
            "aws_subnet.hashicat",
            "aws_vpc.hashicat",
            "tls_private_key.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hashicat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d1df9a5ada1b9b81",
            "owner_id": "030202926652",
            "tags": {
              "Name": "cloudzenix-internet-gateway"
            },
            "vpc_id": "vpc-0b127e3594a94c12b"
          },
          "dependencies": [
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hashicat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08d327c4d046dfbbf",
            "owner_id": "030202926652",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1df9a5ada1b9b81",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0b127e3594a94c12b"
          },
          "dependencies": [
            "aws_internet_gateway.hashicat",
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hashicat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b18701207e9de9ce",
            "route_table_id": "rtb-08d327c4d046dfbbf",
            "subnet_id": "subnet-00badee96e0caf5c5"
          },
          "dependencies": [
            "aws_internet_gateway.hashicat",
            "aws_route_table.hashicat",
            "aws_subnet.hashicat",
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hashicat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030202926652:security-group/sg-079b066d54c6baf71",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079b066d54c6baf71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudzenix-security-group",
            "name_prefix": null,
            "owner_id": "030202926652",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudzenix-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b127e3594a94c12b"
          },
          "dependencies": [
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hashicat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030202926652:subnet/subnet-00badee96e0caf5c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-00badee96e0caf5c5",
            "map_public_ip_on_launch": false,
            "owner_id": "030202926652",
            "tags": {
              "name": "cloudzenix-subnet"
            },
            "vpc_id": "vpc-0b127e3594a94c12b"
          },
          "dependencies": [
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hashicat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030202926652:vpc/vpc-0b127e3594a94c12b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1829282a5478255",
            "default_route_table_id": "rtb-09945b66a384f53b1",
            "default_security_group_id": "sg-01524d8780d3af7df",
            "dhcp_options_id": "dopt-0ec53673fe3a01436",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b127e3594a94c12b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09945b66a384f53b1",
            "owner_id": "030202926652",
            "tags": {
              "Name": "cloudzenix-vpc"
            }
          }
        }
      ]
    }
  ]
}